<resources>
    <string name="app_name" translatable="false">Loan</string>
    <string name="selling">Selling Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="first_time">First time house buyer?</string>
    <string name="first_time_check">Yes</string>
    <string name="lega_fees">Legal Fees</string>
    <string name="stamp_duty">Stamp Duty</string>
    <string name="calculate">Calculate</string>
    <string name="contact_us">Contact Us</string>
    <string name="visit_us">Visit Us</string>
    <string name="reset">Reset</string>
</resources>
