<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name ="myLoan"
            type = "pog.loo.bryan.loan.Loan" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/TextViewFirstTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/first_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDownPayment" />

        <EditText
            android:id="@+id/editTextSellingPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/selling"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDownPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/down_payment"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#66000000"
            app:layout_constraintEnd_toEndOf="@+id/editTextSellingPrice"
            app:layout_constraintStart_toStartOf="@+id/editTextSellingPrice"
            app:layout_constraintTop_toBottomOf="@+id/editTextSellingPrice" />

        <CheckBox
            android:id="@+id/checkBoxFirstTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_time_check"
            app:layout_constraintBottom_toBottomOf="@+id/TextViewFirstTime"
            app:layout_constraintStart_toEndOf="@+id/TextViewFirstTime"
            app:layout_constraintTop_toTopOf="@+id/TextViewFirstTime" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/lega_fees"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewFirstTime" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/stamp_duty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLegalFees" />

        <TextView
            android:id="@+id/textViewLegalFees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{myLoan.legal_fee}"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textViewStampDuty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{myLoan.stamp_duty}"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCalculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCalculate"
            app:layout_constraintTop_toTopOf="@+id/buttonCalculate" />

        <ImageButton
            android:id="@+id/imageButtonContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/contact_us"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStampDuty"
            app:srcCompat="@android:drawable/stat_sys_phone_call"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButtonVisitUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/visit_us"
            app:layout_constraintBottom_toBottomOf="@+id/imageButtonContactUs"
            app:layout_constraintStart_toEndOf="@+id/imageButtonContactUs"
            app:layout_constraintTop_toTopOf="@+id/imageButtonContactUs"
            app:srcCompat="?android:attr/actionModeFindDrawable" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="96dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
